--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ form textarea {
 form input {
     position: relative;
     display: block;
-    height: 40px;
+    height: 30px;
     min-width: 100%;
     max-width: 100%;
     border-radius: 10px;
@@ -173,10 +173,6 @@ form input {
     font-size: 18px;
     transition: 0.4s;
     border: 2px solid #000000;
-}
-
-form input.a:hover {
-    background-color: #42B881;
 }
 
 .div-contacto {
@@ -335,15 +331,15 @@ form input.a:hover {
 
     /* ---------ABOUT------------ */
     .about {
-        display: flex;
+        display: block;
     }
 
     .about-info h2 {
-        font-size: 2.2em;
+        font-size: 2em;
     }
 
     .about p {
-        margin-bottom: 1em;
+        margin-bottom: 2em;
         font-size: medium;
     }
 
