--- a/Style.scss
+++ b/Style.scss
@@ -16,7 +16,6 @@ body {
     color: black;
 }
 
-
 /* ------------------------------- */
 /* ----------PRINCIPAL------------ */
 
@@ -36,7 +35,7 @@ body {
 /* ----------FORMULARIO----------- */
 
 @import "sass/formulario";
-    
+
 /* ------------------------------- */
 /* ----------SOCIAL BAR----------- */
 
@@ -56,64 +55,53 @@ body {
 /* ---------RESPONSIVE------------ */
 
 @media (min-width:200px) {
-
     /* ---------HEAD------------ */
     .contenido h1 {
         display: flex;
         font-size: 2rem;
         text-align: center;
-    }
 
-    .contenido h2 {
-        font-size: 1.4rem;
-        display: flex;
-        text-align: center;
+        h2 {
+            font-size: 1.4rem;
+        }
     }
-
     /* ---------MENU------------ */
-
     .menu {
         font-size: small;
         letter-spacing: 0px;
         padding: 0px 0px;
     }
-
     /* ---------ABOUT------------ */
     .about {
         display: flex;
-    }
 
+        p {
+            margin-bottom: 1em;
+            font-size: medium;
+        }
+    }
     .about-info h2 {
         font-size: 2.2em;
     }
-
-    .about p {
-        margin-bottom: 1em;
-        font-size: medium;
-    }
-
     /* ---------SOCIAL BAR------------ */
     .social ul li a {
         padding: 13px 15px;
     }
-
     /* ---------CONOCIMIENTO------------ */
     .seccion-conocimiento h2 {
         font-size: 2rem;
     }
-
     .galeria {
         display: grid;
+        margin-top: 15px;
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 130px;
         padding: 10px;
     }
-
     .gallery__img {
         object-fit: cover;
         width: 90px;
     }
-
 }
 
 @media (min-width:800px) {
@@ -121,46 +109,38 @@ body {
     /* ---------HEAD------------ */
     .contenido h1 {
         font-size: 4rem;
-    }
 
-    .contenido h2 {
-        font-size: 2rem;
+        h2 {
+            font-size: 2rem;
+        }
     }
-
     /* ---------MENU------------ */
-
     .menu {
         font-size: large;
         letter-spacing: 3px;
         padding: 20px 50px;
     }
-    
-
     /* ---------ABOUT ME------------ */
     .about {
         display: flex;
-    }
 
+        p {
+            margin-bottom: 1em;
+            font-size: x-large;
+        }
+    }
     .about-info h2 {
         font-size: 3em;
     }
-
-    .about p {
-        margin-bottom: 1em;
-        font-size: x-large;
-    }
-
     /* ---------SOCIAL BAR------------ */
     .social ul li a {
         padding: 20px 25px;
     }
-
     /* ---------CONOCIMIENTO------------ */
     .seccion-conocimiento h2 {
         font-size: 4rem;
-        
-    }
 
+    }
     .galeria {
         display: grid;
         margin-top: 90px;
@@ -168,21 +148,18 @@ body {
         grid-auto-rows: 260px;
         padding: 15px;
     }
-
     .gallery__img {
         object-fit: cover;
         width: 190px;
     }
-
 }
-
 
 /* ------------------------------- */
 /* ------SEPARADOR ESTETICO------- */
 
 .separador {
     background-color: #000;
-    height: 100%;
+    width: 100%;
     height: 10px;
 }
 
@@ -192,4 +169,3 @@ body {
 @import "sass/footer";
 
 /* ------------------------------- */
-
